--- a/pages/sierra.html
+++ b/pages/sierra.html
@@ -139,7 +139,7 @@
     <footer>
         <a href='https://www.instagram.com/kaeladoodlez/'><img src='../images/icons/insta.png' class='icon' alt='Instagram Icon'></a>
         <a href='https://www.linkedin.com/in/kaela-han-54360aa8/'><img src='../images/icons/linked.png' class='icon' alt='Instagram Icon'></a>
-        <a href='hattps://www.instagram.com/kaeladoodlez/'><img src='../images/icons/sound.png' class='icon' alt='Instagram Icon'></a>
+        <a href='https://soundcloud.com/kaela-han'><img src='../images/icons/sound.png' class='icon' alt='Instagram Icon'></a>
     </footer>
 </body>
 
