--- a/projects/sierra.html
+++ b/projects/sierra.html
@@ -23,7 +23,7 @@
       <nav class="overlay-menu">
         <ul>
           <a href='../index.html'><li>works</li></a>
-          <a href='pages/about.html'><li>about</li></a>
+          <a href='about.html'><li>about</li></a>
           <a href='../resume.pdf'><li>resume</li></a>
           <a href='art.html'><li>art</li></a>
       </ul>
