--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <div class="slider opened" id="overlay">
       <nav class="overlay-menu">
         <ul>
-          <a href='pages/about.html'>
+          <a href='projects/about.html'>
             <li>about</li>
           </a>
           <a href='resume.pdf'>
             <li>resume</li>
           </a>
-          <a href='pages/art.html'>
+          <a href='projects/art.html'>
             <li>art</li>
           </a>
         </ul>
@@ -46,13 +46,13 @@
     </div>
 
     <nav id="nav1" class='nav'>
-      <a href="pages/about.html">ABOUT |</a>
+      <a href="projects/about.html">ABOUT |</a>
       <a href="resume.pdf">RESUME</a>
     </nav>
 
     <nav id="nav2" class='nav'>
-      <a href="pages/art.html">ART & PHOTOGRAPHY |</a>
-      <a href="pages/posters.html"> TYPOGRAPHY</a>
+      <a href="projects/art.html">ART & PHOTOGRAPHY |</a>
+      <a href="projects/posters.html"> TYPOGRAPHY</a>
     </nav>
 
     <!-- end nav -->
@@ -65,24 +65,24 @@
   <div id='gallery'>
 
     <div id='Col1' class='col'>
-      <a href='pages/sierra.html'><img src='images/sierra/Nav_Img.png' id='s1' alt="Sierra Painting Corp. Business Cards"></a>
-      <a href='pages/sierra.html'><img src='images/sierra/Sierra_1.png' id='s2' alt="Sierra Painting Corp. Business Cards"></a>
-      <a href='pages/medium.html'><img src='images/medium/Nav_Img.png' id='m1' alt="Medium Application Mockup"></a>
+      <a href='projects/sierra.html'><img src='images/sierra/Nav_Img.png' id='s1' alt="Sierra Painting Corp. Business Cards"></a>
+      <a href='projects/sierra.html'><img src='images/sierra/Sierra_1.png' id='s2' alt="Sierra Painting Corp. Business Cards"></a>
+      <a href='projects/medium.html'><img src='images/medium/Nav_Img.png' id='m1' alt="Medium Application Mockup"></a>
     </div>
 
 
     <div id='Col2' class='col'>
-      <a href='pages/visualizer.html'><img src='images/visualizer//Nav_Img.png' id='vis1' alt="Visualizer Screen"><a>
-      <a href='pages/homestead.html'><img src='images/homestead/Nav_Img.png' id='h2' alt='Homestead Desktop Mockup'></a>
-      <a href='pages/ignite.html'><img src='images/ignite/Brochure.png' id='i1' alt = "Ignite Brochure Mockup"></a>
+      <a href='projects/visualizer.html'><img src='images/visualizer//Nav_Img.png' id='vis1' alt="Visualizer Screen"><a>
+      <a href='projects/homestead.html'><img src='images/homestead/Nav_Img.png' id='h2' alt='Homestead Desktop Mockup'></a>
+      <a href='projects/ignite.html'><img src='images/ignite/Brochure.png' id='i1' alt = "Ignite Brochure Mockup"></a>
     </div>
 
 
     <div id='Col3' class='col'>
-      <a href='pages/posters.html'><img src='images/posters/navimg-1.png' id='p1' alt = "Poster Mockup"></a>
-      <a href='pages/ignite.html'><img src='images/ignite/Brochure.png' id='i2' alt="Ignite Brochure Mockup"></a>
-      <a href='pages/homestead.html'><img src='images/homestead/Nav_Img-1.png' id='h1' alt='Homestead Desktop Mockup'></a>
-      <a href='pages/visualizer.html'><img src='images/visualizer/Nav_Img_1.png' id='vis2' alt="Visualizer Screen"></a>
+      <a href='projects/posters.html'><img src='images/posters/navimg-1.png' id='p1' alt = "Poster Mockup"></a>
+      <a href='projects/ignite.html'><img src='images/ignite/Brochure.png' id='i2' alt="Ignite Brochure Mockup"></a>
+      <a href='projects/homestead.html'><img src='images/homestead/Nav_Img-1.png' id='h1' alt='Homestead Desktop Mockup'></a>
+      <a href='projects/visualizer.html'><img src='images/visualizer/Nav_Img_1.png' id='vis2' alt="Visualizer Screen"></a>
     </div>
 
   </div>
