--- a/projects/art.html
+++ b/projects/art.html
@@ -28,14 +28,11 @@
         <a href='../index.html'>
           <li>works</li>
         </a>
-        <a href='pages/about.html'>
+        <a href='about.html'>
           <li>about</li>
         </a>
         <a href='../resume.pdf'>
           <li>resume</li>
-        </a>
-        <a href='pages/art.html'>
-          <li>art</li>
         </a>
       </ul>
     </nav>
