--- a/projects/posters.html
+++ b/projects/posters.html
@@ -27,7 +27,7 @@
         <a href='../index.html'>
           <li>works</li>
         </a>
-        <a href='pages/about.html'>
+        <a href='about.html'>
           <li>about</li>
         </a>
         <a href='../resume.pdf'>
