--- a/projects/visualizer.html
+++ b/projects/visualizer.html
@@ -28,7 +28,7 @@
         <a href='../index.html'>
           <li>works</li>
         </a>
-        <a href='pages/about.html'>
+        <a href='about.html'>
           <li>about</li>
         </a>
         <a href='resume.pdf'>
