About Page Location
Move about page file out of projects folder.

--- a/about.html
+++ b/about.html
@@ -22,13 +22,13 @@
   <div class="slider opened" id="overlay">
     <nav class="overlay-menu">
       <ul>
-        <a href='../index.html'>
+        <a href='index.html'>
           <li>works</li>
         </a>
-        <a href='../resume.pdf'>
+        <a href='resume.pdf'>
           <li>resume</li>
         </a>
-        <a href='art.html'>
+        <a href='projects/art.html'>
           <li>art</li>
         </a>
       </ul>
