--- a/projects/visualizer.html
+++ b/projects/visualizer.html
@@ -28,7 +28,7 @@
         <a href='../index.html'>
           <li>works</li>
         </a>
-        <a href='about.html'>
+        <a href='../about.html'>
           <li>about</li>
         </a>
         <a href='resume.pdf'>
@@ -43,7 +43,7 @@
 
       <nav id="nav1" class='nav'>
           <a href="../index.html">WORKS |</a>
-          <a href="about.html">ABOUT</a>
+          <a href="../about.html">ABOUT</a>
       </nav>
 
       <nav id="nav2" class='nav'>
