--- a/about.html
+++ b/about.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand|Raleway|Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:600" rel="stylesheet">
-  <link rel=icon href='../images/icons/mainfavicon.png' sizes="16x16" type="image/png">
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href='../css/queries.css'>
+  <link rel=icon href='images/icons/mainfavicon.png' sizes="16x16" type="image/png">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href='css/queries.css'>
 </head>
 
 <body class='fade'>
@@ -36,13 +36,13 @@
   </div>
 
   <nav id="nav1" class='nav'>
-    <a href="../index.html">WORKS |</a>
-    <a href="../resume.pdf">RESUME</a>
+    <a href="index.html">WORKS |</a>
+    <a href="resume.pdf">RESUME</a>
   </nav>
 
   <nav id="nav2" class='nav'>
-    <a href="art.html">ART & PHOTOGRAPHY |</a>
-    <a href="posters.html"> TYPOGRAPHY</a>
+    <a href="projects/art.html">ART & PHOTOGRAPHY |</a>
+    <a href="projects/posters.html"> TYPOGRAPHY</a>
   </nav>
   </header>
 
@@ -58,33 +58,32 @@
       <p>When I am not designing, you can find me:</p>
 
       <ul>
-        <li><img src='../images/icons/music.png' id='music' class='icon' alt='Music Icon'>Searching for <strong>new music</strong></li>
-        <li><img src='../images/icons/coffee.png' id='coffee' class='icon' alt='Coffee Icon'>On the lookout for <strong>good coffee</strong></il>
-        <li><img src='../images/icons/paint.png' id='paint' class='icon' alt='Paintbrush Icon'>Sketching, painting, <strong>creating</strong></li>
-        <li><img src='../images/icons/travel.png' id='travel' class='icon' alt='Travel Icon'>Traveling & creating <strong>new experiences</strong></li>
+        <li><img src='images/icons/music.png' id='music' class='icon' alt='Music Icon'>Searching for <strong>new music</strong></li>
+        <li><img src='images/icons/coffee.png' id='coffee' class='icon' alt='Coffee Icon'>On the lookout for <strong>good coffee</strong></il>
+        <li><img src='images/icons/paint.png' id='paint' class='icon' alt='Paintbrush Icon'>Sketching, painting, <strong>creating</strong></li>
+        <li><img src='images/icons/travel.png' id='travel' class='icon' alt='Travel Icon'>Traveling & creating <strong>new experiences</strong></li>
       </ul>
 
       <p>Feel free to contact me:</p>
       <ul id='contact'>
-        <li><img src='../images/icons/phone.png' id='phone' class='icon' alt='Phone Icon'>408.438.3799</li>
-        <li><img src='../images/icons/mail.png' id='mail' class='icon' alt='Email Icon'><a href="mailto:kaehan@ucdavis.com">kaehan@ucdavis.edu</a></li>
+        <li><img src='images/icons/mail.png' id='mail' class='icon' alt='Email Icon'><a href="mailto:kaehan@ucdavis.com">kaehan@ucdavis.edu</a></li>
       </ul>
 
   </section>
 
-  <img src='../images/me.png' id='selfPortrait' alt='Photograph of Myself'>
+  <img src='images/me.png' id='selfPortrait' alt='Photograph of Myself'>
   <!-- end main content -->
 
   <!-- FOOTER -->
 
   <footer>
-    <a href='https://www.instagram.com/kaeladoodlez/'><img src='../images/icons/insta.png' class='icon' alt='Instagram Icon'></a>
-    <a href='https://www.linkedin.com/in/kaela-han-54360aa8/'><img src='../images/icons/linked.png' class='icon' alt='LinkedIn Icon'></a>
-    <a href='https://soundcloud.com/kaela-han'><img src='../images/icons/sound.png' class='icon' alt='SoundCloud Icon'></a>
+    <a href='https://www.instagram.com/kaeladoodlez/'><img src='images/icons/insta.png' class='icon' alt='Instagram Icon'></a>
+    <a href='https://www.linkedin.com/in/kaela-han-54360aa8/'><img src='images/icons/linked.png' class='icon' alt='LinkedIn Icon'></a>
+    <a href='https://soundcloud.com/kaela-han'><img src='images/icons/sound.png' class='icon' alt='SoundCloud Icon'></a>
   </footer>
 
 </body>
 
-<script src="../js/script.js"></script>
+<script src="js/script.js"></script>
 
 </html>
