--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="slider opened" id="overlay">
       <nav class="overlay-menu">
         <ul>
-          <a href='projects/about.html'>
+          <a href='about.html'>
             <li>about</li>
           </a>
           <a href='resume.pdf'>
@@ -46,7 +46,7 @@
     </div>
 
     <nav id="nav1" class='nav'>
-      <a href="projects/about.html">ABOUT |</a>
+      <a href="about.html">ABOUT |</a>
       <a href="resume.pdf">RESUME</a>
     </nav>
 
