--- a/about.html
+++ b/about.html
@@ -66,6 +66,7 @@
 
       <p>Feel free to contact me:</p>
       <ul id='contact'>
+        <li><img src='images/icons/phone.png' id='phone' class='icon' alt='Phone Icon'>408.438.3799</li>
         <li><img src='images/icons/mail.png' id='mail' class='icon' alt='Email Icon'><a href="mailto:kaehan@ucdavis.com">kaehan@ucdavis.edu</a></li>
       </ul>
 
