--- a/projects/ignite.html
+++ b/projects/ignite.html
@@ -34,7 +34,7 @@
           <a href='../about.html'>
             <li>about</li>
           </a>
-          <a href='../resume.pdf'>
+          <a href='../Kaela_Han_Resume.pdf'>
             <li>resume</li>
           </a>
           <a href='art.html'>
@@ -46,7 +46,8 @@
 
     <nav id="nav1" class='nav'>
       <a href="../index.html">WORKS |</a>
-      <a href="../about.html">ABOUT</a>
+      <a href="../about.html">ABOUT |</a>
+      <a href="../Kaela_Han_Resume.pdf">RESUME</a>
     </nav>
 
     <nav id="nav2" class='nav'>
