--- a/projects/art.html
+++ b/projects/art.html
@@ -31,7 +31,7 @@
         <a href='../about.html'>
           <li>about</li>
         </a>
-        <a href='../resume.pdf'>
+        <a href='../Kaela_Han_Resume.pdf'>
           <li>resume</li>
         </a>
       </ul>
@@ -40,7 +40,8 @@
 
   <nav id="nav1" class='nav'>
     <a href="../index.html">WORKS |</a>
-    <a href="../about.html">ABOUT</a>
+    <a href="../about.html">ABOUT |</a>
+    <a href="../Kaela_Han_Resume.pdf">RESUME</a>
   </nav>
 
   <nav id="nav2" class='nav'>
