--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a href='about.html'>
             <li>about</li>
           </a>
-          <a href='Kaela_Han_Resume.pdf'>
+          <a href='Kaela_Han_Resume.pdf' target="_blank">
             <li>resume</li>
           </a>
           <a href='projects/art.html'>
@@ -47,7 +47,7 @@
 
     <nav id="nav1" class='nav'>
       <a href="about.html">ABOUT |</a>
-      <a href="Kaela_Han_Resume.pdf">RESUME</a>
+      <a href="Kaela_Han_Resume.pdf" target="_blank">RESUME</a>
     </nav>
 
     <nav id="nav2" class='nav'>
