--- a/projects/ignite.html
+++ b/projects/ignite.html
@@ -34,7 +34,7 @@
           <a href='../about.html'>
             <li>about</li>
           </a>
-          <a href='../Kaela_Han_Resume.pdf'>
+          <a href='../Kaela_Han_Resume.pdf' target="_blank">
             <li>resume</li>
           </a>
           <a href='art.html'>
@@ -47,7 +47,7 @@
     <nav id="nav1" class='nav'>
       <a href="../index.html">WORKS |</a>
       <a href="../about.html">ABOUT |</a>
-      <a href="../Kaela_Han_Resume.pdf">RESUME</a>
+      <a href="../Kaela_Han_Resume.pdf" target="_blank">RESUME</a>
     </nav>
 
     <nav id="nav2" class='nav'>
@@ -70,10 +70,10 @@
         <hr class='dash'>
         <li><span class='heading'>DELIVERABLES | </span>Brand Identity, Business System, Marketing Applications</li><br>
         <hr class='dash'>
-        <li><span class='heading'>COLLABORATION | </span><a href='https://www.jieesong.com/'> Jie Song,</a>
-          <a href='https://www.emwlin.com/'>Emily Lin</a></li><br>
+        <li><span class='heading'>COLLABORATION | </span><a href='https://www.jieesong.com/' target="_blank"> Jie Song,</a>
+          <a href='https://www.emwlin.com/' target="_blank">Emily Lin</a></li><br>
         <hr class='dash'>
-        <li><span class='heading'>LINK | </span><a href='https://issuu.com/kaehan/docs/ignite_process_final'> Process Manual</a></li>
+        <li><span class='heading'>LINK | </span><a href='https://issuu.com/kaehan/docs/ignite_process_final' target="_blank"> Process Manual</a></li>
       </ul>
     </div>
 
