--- a/projects/visualizer.html
+++ b/projects/visualizer.html
@@ -31,7 +31,7 @@
         <a href='../about.html'>
           <li>about</li>
         </a>
-        <a href='Kaela_Han_Resume.pdf'>
+        <a href='Kaela_Han_Resume.pdf' target="_blank">
           <li>resume</li>
         </a>
         <a href='art.html'>
@@ -44,7 +44,7 @@
       <nav id="nav1" class='nav'>
           <a href="../index.html">WORKS |</a>
           <a href="../about.html">ABOUT |</a>
-          <a href="../Kaela_Han_Resume.pdf">RESUME</a>
+          <a href="../Kaela_Han_Resume.pdf" target="_blank">RESUME</a>
       </nav>
 
       <nav id="nav2" class='nav'>
@@ -63,7 +63,7 @@
             <ul>
               <hr class='dash'><li><span class='heading'>TOOLS | </span>Javascript, p5 Sound, HTML5, CSS, Github</li><br>
               <hr class='dash'><li><span class='heading'>DELIVERABLES | </span>Interactive Interface</li><br>
-              <hr class='dash'><li><span class='heading'>LINK | </span><a href='https://kaekae13.github.io/Visualizer/index.html'> Mood Visualizer</a></li><br>
+              <hr class='dash'><li><span class='heading'>LINK | </span><a href='https://kaekae13.github.io/Visualizer/index.html' target="_blank"> Mood Visualizer</a></li><br>
             </ul>
         </div>
 
