--- a/projects/homestead.html
+++ b/projects/homestead.html
@@ -30,7 +30,7 @@
         <a href='../about.html'>
           <li>about</li>
         </a>
-        <a href='../Kaela_Han_Resume.pdf'>
+        <a href='../Kaela_Han_Resume.pdf' target="_blank">
           <li>resume</li>
         </a>
         <a href='art.html'>
@@ -43,7 +43,7 @@
   <nav id="nav1" class='nav'>
     <a href="../index.html">WORKS |</a>
     <a href="../about.html">ABOUT |</a>
-    <a href="../Kaela_Han_Resume.pdf">RESUME</a>
+    <a href="../Kaela_Han_Resume.pdf" target="_blank">RESUME</a>
   </nav>
 
   <nav id="nav2" class='nav'>
@@ -64,7 +64,7 @@
         <hr class='dash'>
         <li><span class='heading'>DELIVERABLES | </span>Interface Rebranding</li><br>
         <hr class='dash'>
-        <li><span class='heading'>LINK | </span><a href='https://www.hhs.fuhsd.org/artdepartment'> Original Site</a></li>
+        <li><span class='heading'>LINK | </span><a href='https://www.hhs.fuhsd.org/artdepartment' target="_blank"> Original Site</a></li>
       </ul>
     </div>
     <img src="../images/homestead/Homestead_1.png" id='homestead-1' class='intro-img'>
