--- a/projects/medium.html
+++ b/projects/medium.html
@@ -30,7 +30,7 @@
         <a href='../about.html'>
           <li>about</li>
         </a>
-        <a href='../Kaela_Han_Resume.pdf'>
+        <a href='../Kaela_Han_Resume.pdf' target="_blank">
           <li>resume</li>
         </a>
         <a href='art.html'>
@@ -43,7 +43,7 @@
   <nav id="nav1" class='nav'>
     <a href="../index.html">WORKS |</a>
     <a href="../about.html">ABOUT |</a>
-    <a href="../Kaela_Han_Resume.pdf">RESUME</a>
+    <a href="../Kaela_Han_Resume.pdf" target="_blank">RESUME</a>
   </nav>
 
   <nav id="nav2" class='nav'>
@@ -65,7 +65,7 @@
         <hr class='dash'>
         <li><span class='heading'>DELIVERABLES | </span>Brand Identity, Interface Design</li><br>
         <hr class='dash'>
-        <li><span class='heading'>LINK | </span><a href='https://invis.io/W8KDLN0XK67#/301729942_6-1_-_5-3x'> Prototype</a></li>
+        <li><span class='heading'>LINK | </span><a href='https://invis.io/W8KDLN0XK67#/301729942_6-1_-_5-3x' target="_blank"> Prototype</a></li>
       </ul>
     </div>
 
