--- a/projects/posters.html
+++ b/projects/posters.html
@@ -30,7 +30,7 @@
         <a href='../about.html'>
           <li>about</li>
         </a>
-        <a href='../Kaela_Han_Resume.pdf'>
+        <a href='../Kaela_Han_Resume.pdf' target="_blank">
           <li>resume</li>
         </a>
         <a href='art.html'>
@@ -43,7 +43,7 @@
   <nav id="nav1" class='nav'>
     <a href="../index.html">WORKS |</a>
     <a href="../about.html">ABOUT |</a>
-    <a href="../Kaela_Han_Resume.pdf">RESUME</a>
+    <a href="../Kaela_Han_Resume.pdf" target="_blank">RESUME</a>
   </nav>
 
   <nav id="nav2" class='nav'>
