--- a/projects/sierra.html
+++ b/projects/sierra.html
@@ -24,7 +24,7 @@
         <ul>
           <a href='../index.html'><li>works</li></a>
           <a href='../about.html'><li>about</li></a>
-          <a href='../Kaela_Han_Resume.pdf'><li>resume</li></a>
+          <a href='../Kaela_Han_Resume.pdf' target="_blank"><li>resume</li></a>
           <a href='art.html'><li>art</li></a>
       </ul>
     </nav>
@@ -34,7 +34,7 @@
     <nav id="nav1" class='nav'>
       <a href="../index.html">WORKS |</a>
       <a href="../about.html">ABOUT |</a>
-      <a href="../Kaela_Han_Resume.pdf">RESUME</a>
+      <a href="../Kaela_Han_Resume.pdf" target="_blank">RESUME</a>
     </nav>
 
     <nav id="nav2" class='nav'>
