--- a/projects/medium.html
+++ b/projects/medium.html
@@ -65,7 +65,7 @@
         <hr class='dash'>
         <li><span class='heading'>DELIVERABLES | </span>Brand Identity, Interface Design</li><br>
         <hr class='dash'>
-        <li><span class='heading'>LINK | </span><a href='https://invis.io/W8KDLN0XK67#/301729942_6-1_-_5-3x' target="_blank"> Prototype</a></li>
+        <li><span class='heading'>LINK | </span><a href='https://invis.io/W8KDLN0XK67' target="_blank"> Prototype</a></li>
       </ul>
     </div>
 
