--- a/projects/visualizer.html
+++ b/projects/visualizer.html
@@ -75,7 +75,7 @@
           <div class='overview-content'>
               <h5>THE CHALLENGE</h5>
               <h2>Build an application ground up, taking into account effective principles of user interface design and best practices in web development.</h2>
-              <hr class='rule' style='color:grey;background-color:grey;'>
+              <hr class='rule' style='color:#33FF99;background-color:#33FF99;'>
 
               <p>The interface allows users to play music and customize the visual aspects of their music player: they can select from different colors, control the type of visuals (waves, circles, bars), and upload their own audio file as well (which is a function that is underway). The interface is intended as a tool for relaxation, creative enjoyment, and a way to recreate the experience of listening to music.</p>
               <section class='info'>
@@ -96,7 +96,7 @@
 
         <section id='vis-research' class='content'>
           <h2>Visual Research & Concepts</h2>
-          <hr class='rule' style='color:grey;background-color:grey;'>
+          <hr class='rule' style='color:#33FF99;background-color:#33FF99;'>
 
           <p>I wanted to create a very sleek, modern, and clean aesthetic for the project and use futuristic, fluid shapes and bright vibrant colors and my moodboard reflects that: I found a variety of dynamic and vibrantly colored graphics - I sought to find a variety of different shapes including circular shapes, waveforms, and abstract blob-like forms.
           </p>
@@ -107,7 +107,7 @@
 
         <section class='content'>
           <h2>Wireframes<br>(mobile + desktop)</h2>
-          <hr class='rule' style='color:grey;background-color:grey;'>
+          <hr class='rule' style='color:#33FF99;background-color:#33FF99;'>
 
           <p id='wireCaption'>Though the final interface is designed only for desktop view, I plan to continue improving upon the project and eventually develop it into a mobile application. The following wireframes show various different pages & layouts from the interface.</p>
           <img src='../images/visualizer/Desktop_Wireframe.png' class='wireframe' alt='Desktop Wireframes' >
@@ -118,7 +118,7 @@
 
         <section class='content'>
           <h2>Site Flow</h2>
-          <hr class='rule' style='color:grey;background-color:grey;'>
+          <hr class='rule' style='color:#33FF99;background-color:#33FF99;'>
 
           <img src='../images/visualizer/Site_Flow.png' alt='Site Flow Diagram' id='siteflow'>
         </section>
@@ -127,7 +127,7 @@
 
         <section class='content'>
           <h2>Final Interface</h2>
-          <hr class='rule' style='color:grey;background-color:grey;'>
+          <hr class='rule' style='color:#33FF99;background-color:#33FF99;'>
 
           <img src='../images/visualizer/1.gif' class='visgif' alt='Visualizer Screen Recording'>
           <img src='../images/visualizer/2.gif' class='visgif' alt='Visualizer Screen Recording'>
