--- a/about.html
+++ b/about.html
@@ -53,8 +53,7 @@
     <hr class='rule'>
 
     <p>I am a hardworking and passionate designer with an avid love for books, music, and coffee! I recently graduated from the University of California, Davis in Spring of 2018 with an emphasis in graphics and a minor in communications.
-      <p>I feel strongly about creating positive social impact through design and helping the world gain a more accurate perception of how prevalent design is today. I am currently interested in web design and am searching for opportunities to expand upon
-        my UX/UI skillset.</p>
+      <p>I feel strongly about creating positive social impact through design and helping the world gain a more accurate perception of how prevalent design is today. I am currently interested in web design and am searching for opportunities to expand my understanding of/experience with UI/UX design.</p>
       <p>When I am not designing, you can find me:</p>
 
       <ul>
