--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <a href='index.html'>
           <li>works</li>
         </a>
-        <a href='resume.pdf'>
+        <a href='Kaela_Han_Resume.pdf'>
           <li>resume</li>
         </a>
         <a href='projects/art.html'>
@@ -37,7 +37,7 @@
 
   <nav id="nav1" class='nav'>
     <a href="index.html">WORKS |</a>
-    <a href="resume.pdf">RESUME</a>
+    <a href="Kaela_Han_Resume.pdf">RESUME</a>
   </nav>
 
   <nav id="nav2" class='nav'>
