--- a/projects/homestead.html
+++ b/projects/homestead.html
@@ -64,7 +64,7 @@
         <hr class='dash'>
         <li><span class='heading'>DELIVERABLES |</span> Interface Rebranding</li><br>
         <hr class='dash'>
-        <li><span class='heading'>LINK |</span><a href='https://www.hhs.fuhsd.org/artdepartment' target="_blank"> Original Site</a></li>
+        <li><span class='heading'>LINK |</span><a href='https://hhs.fuhsd.org/academics/departments/art' target="_blank"> Original Site</a></li>
       </ul>
     </div>
     <img src="../images/homestead/Homestead_1.png" id='homestead-1' class='intro-img'>
