--- a/projects/medium.html
+++ b/projects/medium.html
@@ -108,7 +108,7 @@
         or donates their first item, creates their first event, etc.</p>
       </div>
     </section>
-    <img src='../images/medium/Medium_Screens.png' id='medium-scrn' alt='Medium Screenshots'>
+    <img src='../images/medium/Medium_Screens.jpg' id='medium-scrn' alt='Medium Screenshots'>
   </section>
 
   <!-- end main content -->
