--- a/projects/art.html
+++ b/projects/art.html
@@ -89,9 +89,20 @@
 
           <li>
             <a href="#image-3">
-              <img src='../images/art/Painting.png' id='img-3' class='img' alt='Jules Cheret Study/Painting'>
+              <img src='../images/art/Building.png' id='img-3' class='img' alt='Building Vector Illustration'>
             </a>
             <div class="lb-overlay" id="image-3">
+              <img src='../images/art/Building.png' alt='Building Vector Illustration'>
+              <a href="#page" class="lb-close">&#10799;</a>
+            </div>
+          </li>
+
+
+          <li>
+            <a href="#image-4">
+              <img src='../images/art/Painting.png' id='img-4' class='img' alt='Jules Cheret Study/Painting'>
+            </a>
+            <div class="lb-overlay" id="image-4">
               <img src='../images/art/Painting.png' alt='Jules Cheret Study/Painting'>
               <a href="#page" class="lb-close">&#10799;</a>
             </div>
@@ -101,32 +112,32 @@
 
         <div id='col-3' class="col">
           <li>
-              <a href='#image-4'>
-                  <img src='../images/art/Portrait.png' id='img-4' class='img' alt='Portrait'>
+              <a href='#image-5'>
+                  <img src='../images/art/Portrait.png' id='img-5' class='img' alt='Portrait'>
               </a>
-              <div class="lb-overlay" id="image-4">
+              <div class="lb-overlay" id="image-5">
                   <img src='../images/art/Portrait.png' alt='Portrait'>
                   <a href="#page" class="lb-close">&#10799;</a>
               </div>
           </li>
 
           <li>
-            <a href="#image-5">
-              <img src='../images/art/Portrait_3.jpg' id='img-5' class='img' alt='Perry'/>
-            </a>
-            <div class="lb-overlay" id="image-5">
-              <img src='../images/art/Portrait_3.jpg' alt='Perry'>
-              <a href="#page" class="lb-close">&#10799;</a>
-            </div>
+              <a href='#image-6'>
+                  <img src='../images/art/Interior.png' id='img-6' class='img' alt='Interior Vector Illustration'>
+              </a>
+              <div class="lb-overlay" id="image-6">
+                  <img src='../images/art/Interior.png' alt='Interior Vector Illustration'>
+                  <a href="#page" class="lb-close">&#10799;</a>
+              </div>
           </li>
 
           <li>
-            <a href="#image-6">
-              <img src='../images/art/Portrait_2.jpg' id='img-6' class='img' alt='Perry'/>
+            <a href="#image-7">
+              <img src='../images/art/Portrait_3.jpg' id='img-7' class='img' alt='Perry'/>
             </a>
-            <div class="lb-overlay" id="image-6">
-              <img src='../images/art/Portrait_2.jpg'id="image-6a" alt='Perry'>
-              <a href="#page" id='close-1' class="lb-close">&#10799;</a>
+            <div class="lb-overlay" id="image-7">
+              <img src='../images/art/Portrait_3.jpg' alt='Perry'>
+              <a href="#page" class="lb-close">&#10799;</a>
             </div>
           </li>
         </div>
@@ -134,20 +145,31 @@
 
         <div id="col-4" class="col">
           <li>
-            <a href="#image-7">
-              <img src='../images/art/Portrait_1.jpg' id='img-7' class='img' alt="Tattoo"/>
+            <a href="#image-8">
+              <img src='../images/art/Portrait_2.jpg' id='img-8' class='img' alt='Perry'/>
             </a>
-            <div class="lb-overlay" id="image-7">
+            <div class="lb-overlay" id="image-8">
+              <img src='../images/art/Portrait_2.jpg'id="image-8a" alt='Perry'>
+              <a href="#page" id='close-1' class="lb-close">&#10799;</a>
+            </div>
+          </li>
+
+
+          <li>
+            <a href="#image-9">
+              <img src='../images/art/Portrait_1.jpg' id='img-9' class='img' alt="Tattoo"/>
+            </a>
+            <div class="lb-overlay" id="image-9">
               <img src='../images/art/Portrait_1.jpg' alt="Tattoo">
               <a href="#page" class="lb-close">&#10799;</a>
             </div>
           </li>
 
           <li>
-            <a href="#image-8">
-              <img src='../images/art/Environment_1.jpg' id='img-8' class='img' alt="Architecture">
+            <a href="#image-10">
+              <img src='../images/art/Environment_1.jpg' id='img-10' class='img' alt="Architecture">
             </a>
-            <div class="lb-overlay" id="image-8">
+            <div class="lb-overlay" id="image-10">
               <img src='../images/art/Environment_1.jpg' alt="Architecture">
               <a href="#page" class="lb-close">&#10799;</a>
             </div>
@@ -156,10 +178,10 @@
 
       <div id="col-5" class="col">
         <li>
-          <a href="#image-9">
-            <img src='../images/art/Environment_2.png' id='img-9' class='img' onclick="fadeOut()" alt="Architecture">
+          <a href="#image-11">
+            <img src='../images/art/Environment_2.png' id='img-11' class='img' onclick="fadeOut()" alt="Architecture">
           </a>
-          <div class="lb-overlay" id="image-9">
+          <div class="lb-overlay" id="image-11">
             <img src='../images/art/Environment_2.png'>
             <a href="#page" class="lb-close">&#10799;</a>
           </div>
