--- a/projects/art.html
+++ b/projects/art.html
@@ -132,6 +132,19 @@
           </li>
 
           <li>
+              <a href='#image-6a'>
+                  <img src='../images/art/Sushi.png' id='img-6a' class='img' alt='Sushi Vector Illustration'>
+              </a>
+              <div class="lb-overlay" id="image-6a">
+                  <img src='../images/art/Sushi.png' alt='Sushi Vector Illustration'>
+                  <a href="#page" class="lb-close">&#10799;</a>
+              </div>
+          </li>
+        </div>
+
+
+        <div id="col-4" class="col">
+          <li>
             <a href="#image-7">
               <img src='../images/art/Portrait_3.jpg' id='img-7' class='img' alt='Perry'/>
             </a>
@@ -140,10 +153,7 @@
               <a href="#page" class="lb-close">&#10799;</a>
             </div>
           </li>
-        </div>
 
-
-        <div id="col-4" class="col">
           <li>
             <a href="#image-8">
               <img src='../images/art/Portrait_2.jpg' id='img-8' class='img' alt='Perry'/>
@@ -164,19 +174,19 @@
               <a href="#page" class="lb-close">&#10799;</a>
             </div>
           </li>
-
-          <li>
-            <a href="#image-10">
-              <img src='../images/art/Environment_1.jpg' id='img-10' class='img' alt="Architecture">
-            </a>
-            <div class="lb-overlay" id="image-10">
-              <img src='../images/art/Environment_1.jpg' alt="Architecture">
-              <a href="#page" class="lb-close">&#10799;</a>
-            </div>
-          </li>
       </div>
 
       <div id="col-5" class="col">
+        <li>
+          <a href="#image-10">
+            <img src='../images/art/Environment_1.jpg' id='img-10' class='img' alt="Architecture">
+          </a>
+          <div class="lb-overlay" id="image-10">
+            <img src='../images/art/Environment_1.jpg' alt="Architecture">
+            <a href="#page" class="lb-close">&#10799;</a>
+          </div>
+        </li>
+        
         <li>
           <a href="#image-11">
             <img src='../images/art/Environment_2.png' id='img-11' class='img' onclick="fadeOut()" alt="Architecture">
