--- a/projects/ignite.html
+++ b/projects/ignite.html
@@ -128,7 +128,7 @@
       <h2>Logo Official</h2>
       <hr class='rule' style='color:orange;background-color:orange;'>
 
-      <p class='logoCaption'>The final Ignite logo consists a graphic of a lightbulb within type logo, which allowed us to keep an element of playfulness while simultaneously communicating a professional aesthetic through the thin, elegant, and modern typeface.</p>
+      <p class='logoCaption'>The final Ignite logo consists of a graphic of a lightbulb within type logo, which allowed us to keep an element of playfulness while simultaneously communicating a professional aesthetic through the thin, elegant, and modern typeface.</p>
       <img src='../images/ignite/Final_Logo.png' class='final-logo' alt='Ignite Final Logo'>
     </section>
 
@@ -140,6 +140,10 @@
       <h2>Business System</h2>
       <hr class='rule' style='color:orange;background-color:orange;'>
 
+      <p>Consistency and simplicity was a key component of the business system design,
+        which I was primarily responsible for. The lightbulb motif was enlargened and
+        used throughout the business system materials and white space was used effectively
+        to organize and balance any text.</p>
       <img src='../images/ignite/Business_System.png' id='ignite-bus' alt='Business System'>
     </section>
 
