--- a/projects/homestead.html
+++ b/projects/homestead.html
@@ -67,7 +67,7 @@
         <li><span class='heading'>LINK |</span><a href='https://hhs.fuhsd.org/academics/departments/art' target="_blank"> Original Site</a></li>
       </ul>
     </div>
-    <img src="../images/homestead/Homestead_1.png" id='homestead-1' class='intro-img'>
+    <img src="../images/homestead/Homestead_1.jpg" id='homestead-1' class='intro-img'>
 
     <hr class='divider'>
 
