Image File Name Correction

--- a/projects/homestead.html
+++ b/projects/homestead.html
@@ -67,7 +67,7 @@
         <li><span class='heading'>LINK |</span><a href='https://hhs.fuhsd.org/academics/departments/art' target="_blank"> Original Site</a></li>
       </ul>
     </div>
-    <img src="../images/homestead/Homestead_1.jpg" id='homestead-1' class='intro-img'>
+    <img src="../images/homestead/Homestead_1.png" id='homestead-1' class='intro-img'>
 
     <hr class='divider'>
 
@@ -100,7 +100,7 @@
       <h2>Graphic Identity</h2>
       <hr class='rule' style='color:#108046;background-color:#108046;margin-bottom: 3%'>
 
-      <img src='../images/homestead/Graphic_Identity.png' class='graphic-identity'>
+      <img src='../images/homestead/Graphic_Identity.jpg' class='graphic-identity'>
     </section>
 
     <hr class='divider'>
