--- a/projects/homestead.html
+++ b/projects/homestead.html
@@ -100,7 +100,7 @@
       <h2>Graphic Identity</h2>
       <hr class='rule' style='color:#108046;background-color:#108046;margin-bottom: 3%'>
 
-      <img src='../images/homestead/Graphic_Identity.jpg' class='graphic-identity'>
+      <img src='../images/homestead/Graphic_Identity.png' class='graphic-identity'>
     </section>
 
     <hr class='divider'>
@@ -110,7 +110,7 @@
         <hr class='rule' style='color:#108046;background-color:#108046;'>
         <p>Considering the target audience, I focused on designing a clean, professional page and clarifying navigations by implementing a sleek, modern aesthetic that would appeal to high school students. Information hierarchy was designed on the basis of student interests and needs, beginning with a general navigation at the very top of the page followed by the course list, upcoming events, a gallery showcasing student work, and faculty spotlight.</p>
 
-        <img src='../images/homestead/Homestead_Screen.jpg' id='final-des' alt='Homestead High School Art Department Website Final Redesign'>
+        <img src='../images/homestead/Graphic_Identity.jpg' id='final-des' alt='Homestead High School Art Department Website Final Redesign'>
     </section>
 
 
