--- a/projects/medium.html
+++ b/projects/medium.html
@@ -76,7 +76,7 @@
     <section class='content'>
       <div class='overview-content'>
           <h5>THE CHALLENGE</h5>
-          <h2>Create & design a mobile application taking into account the principle of <strong>equity</strong>.</h2>
+          <h2>How can we create a positive, friendly platform that not only encourages <strong>connections</strong> between creatives but also creates a strong sense of <strong>support</strong> within that community?</h2>
           <hr class='rule' style='color:#DD7860;background-color:#DD7860;'>
 
           <section class='info'>
