--- a/about.html
+++ b/about.html
@@ -7,77 +7,69 @@
   <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand|Raleway|Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:600" rel="stylesheet">
-  <link rel=icon href='images/icons/mainfavicon.png' sizes="16x16" type="image/png">
+  <link rel="icon" href="images/icons/mainfavicon.png" sizes="16x16" type="image/png">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href='css/queries.css'>
+  <link rel="stylesheet" href="css/queries.css">
 </head>
 
-<body class='fade'>
+<body class="fade">
 
 <!-- BEGIN NAVIGATION-->
   <!-- HAMBURGER MENU -->
-  <span style="font-size:100px;cursor:pointer" id='toggle'>&#9776;</span>
+  <span style="font-size:100px;cursor:pointer" id="toggle">&#9776;</span>
 
   <!-- OVERLAY -->
   <div class="slider opened" id="overlay">
     <nav class="overlay-menu">
       <ul>
-        <a href='index.html'>
+        <a href="index.html">
           <li>works</li>
         </a>
-        <a href='Kaela_Han_Resume.pdf'>
+        <a href="Kaela_Han_Resume.pdf">
           <li>resume</li>
         </a>
-        <a href='projects/art.html'>
+        <a href="https://www.kaelahan.com">
           <li>art</li>
         </a>
       </ul>
     </nav>
   </div>
 
-  <nav id="nav1" class='nav'>
+  <nav id="nav1" class="nav">
     <a href="index.html">WORKS |</a>
     <a href="Kaela_Han_Resume.pdf">RESUME</a>
   </nav>
 
-  <nav id="nav2" class='nav'>
-    <a href="projects/art.html">ART & PHOTOGRAPHY |</a>
+  <nav id="nav2" class="nav">
+    <a href="www.kaelahan.com">ART |</a>
     <a href="projects/posters.html"> TYPOGRAPHY</a>
   </nav>
   </header>
 
   <!-- BEGIN MAIN CONTENT -->
 
-  <section id='about-intro' class='maincontent'>
+  <section id="about-intro" class="maincontent">
     <h1>about me</h1>
 
-    <p>I am a hardworking and passionate designer with an avid love for books, music, and coffee! I recently graduated from the University of California, Davis in Spring of 2018 with an emphasis in graphics and a minor in communications.
+    <p>I graduated from the University of California, Davis in 2018 with an emphasis in graphics and a minor in communications.
       <p>I feel strongly about creating positive social impact through design and helping the world gain a more accurate perception of how prevalent design is today. I am currently interested in web design and am searching for opportunities to expand my understanding of/experience with UI/UX design.</p>
-      <p>When I am not designing, you can find me:</p>
-
-      <ul>
-        <li><img src='images/icons/music.png' id='music' class='icon' alt='Music Icon'>Searching for <strong>new music</strong></li>
-        <li><img src='images/icons/coffee.png' id='coffee' class='icon' alt='Coffee Icon'>On the lookout for <strong>good coffee</strong></il>
-        <li><img src='images/icons/paint.png' id='paint' class='icon' alt='Paintbrush Icon'>Sketching, painting, <strong>creating</strong></li>
-        <li><img src='images/icons/travel.png' id='travel' class='icon' alt='Travel Icon'>Traveling & creating <strong>new experiences</strong></li>
-      </ul>
+      
 
       <p>Feel free to contact me:</p>
-      <ul id='contact'>
-        <li><img src='images/icons/mail.png' id='mail' class='icon' alt='Email Icon'><a href="mailto:kaehan@ucdavis.com">kaehan@ucdavis.edu</a></li>
+      <ul id="contact">
+        <li><img src="images/icons/mail.png" id="mail" class="icon" alt="Email Icon"><a href="mailto:kaehan@ucdavis.com">kaelahan4@gmail.com</a></li>
       </ul>
 
   </section>
 
-  <img src='images/me.png' id='selfPortrait' alt='Photograph of Myself'>
+  <img src="images/me.png" id="selfPortrait" alt="Photograph of Myself">
   <!-- end main content -->
 
   <!-- FOOTER -->
 
   <footer>
-    <a href='https://www.instagram.com/kaeladoodlez/'><img src='images/icons/insta.png' class='icon' alt='Instagram Icon'></a>
-    <a href='https://www.linkedin.com/in/kaela-han-54360aa8/'><img src='images/icons/linked.png' class='icon' alt='LinkedIn Icon'></a>
-    <a href='https://soundcloud.com/kaela-han'><img src='images/icons/sound.png' class='icon' alt='SoundCloud Icon'></a>
+    <a href="https://www.instagram.com/kaela.han.art/"><img src="images/icons/insta.png" class="icon" alt="Instagram Icon"></a>
+    <a href="https://www.linkedin.com/in/kaela-han-54360aa8"><img src="images/icons/linked.png" class="icon" alt="LinkedIn Icon"></a>
   </footer>
 
 </body>
