--- a/index.html
+++ b/index.html
@@ -7,51 +7,51 @@
   <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand|Raleway|Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:600" rel="stylesheet">
-  <link rel=icon href='images/icons/mainfavicon.png' sizes="16x16" type="image/png">
+  <link rel="icon" href="images/icons/mainfavicon.png" sizes="16x16" type="image/png">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href='css/queries.css'>
+  <link rel="stylesheet" href="css/queries.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/0.1.12/wow.min.js"></script>
 </head>
 
 
-<body class='fade'>
+<body class="fade">
 
   <header>
 
     <!-- BEGIN NAVIGATION-->
     <!-- HAMBURGER MENU -->
-    <span style="font-size:100px;cursor:pointer" id='toggle'>&#9776;</span>
+    <span style="font-size:100px;cursor:pointer" id="toggle">&#9776;</span>
 
     <!-- OVERLAY -->
     <div class="slider opened" id="overlay">
       <nav class="overlay-menu">
         <ul>
-          <a href='about.html'>
+          <a href="about.html">
             <li>about</li>
           </a>
-          <a href='Kaela_Han_Resume.pdf' target="_blank">
+          <a href="Kaela_Han_Resume.pdf" target="_blank">
             <li>resume</li>
           </a>
-          <a href='projects/art.html'>
+          <a href="https://www.kaelahan.com">
             <li>art</li>
           </a>
         </ul>
       </nav>
     </div>
 
-    <div id='title'>
+    <div id="title">
       <h1>KAELA HAN</h1>
-      <h3>graphic designer | illustrator</h3>
+      <h3>web &amp; graphic designer</h3>
     </div>
 
-    <nav id="nav1" class='nav'>
+    <nav id="nav1" class="nav">
       <a href="about.html">ABOUT |</a>
       <a href="Kaela_Han_Resume.pdf" target="_blank">RESUME</a>
     </nav>
 
-    <nav id="nav2" class='nav'>
-      <a href="projects/art.html">ART & PHOTOGRAPHY |</a>
+    <nav id="nav2" class="nav">
+      <a href="https://www.kaelahan.com">ART |</a>
       <a href="projects/posters.html"> TYPOGRAPHY</a>
     </nav>
 
@@ -62,27 +62,27 @@
 
   <!-- BEGIN MAIN CONTENT -->
 
-  <div id='gallery'>
+  <div id="gallery">
 
-    <div id='Col1' class='col'>
-      <a href='projects/sierra.html'><img src='images/sierra/Nav_Img.png' id='s1' alt="Sierra Painting Corp. Business Cards"></a>
-      <a href='projects/sierra.html'><img src='images/sierra/Sierra_1.png' id='s2' alt="Sierra Painting Corp. Business Cards"></a>
-      <a href='projects/medium.html'><img src='images/medium/Nav_Img.png' id='m1' alt="Medium Application Mockup"></a>
+    <div id="Col1" class="col">
+      <a href="projects/sierra.html"><img src="images/sierra/Nav_Img.png" id="s1" alt="Sierra Painting Corp. Business Cards"></a>
+      <a href="projects/sierra.html"><img src="images/sierra/Sierra_1.png" id="s2" alt="Sierra Painting Corp. Business Cards"></a>
+      <a href="projects/medium.html"><img src="images/medium/Nav_Img.png" id="m1" alt="Medium Application Mockup"></a>
     </div>
 
 
-    <div id='Col2' class='col'>
-      <a href='projects/visualizer.html'><img src='images/visualizer//Nav_Img.png' id='vis1' alt="Visualizer Screen"><a>
-      <a href='projects/homestead.html'><img src='images/homestead/Nav_Img.png' id='h2' alt='Homestead Desktop Mockup'></a>
-      <a href='projects/ignite.html'><img src='images/ignite/Brochure.png' id='i1' alt = "Ignite Brochure Mockup"></a>
+    <div id="Col2" class="col">
+      <a href="projects/visualizer.html"><img src="images/visualizer//Nav_Img.png" id="vis1" alt="Visualizer Screen"></a>
+      <a href="projects/pbteen.html"><img src="images/homestead/Nav_Img.png" id="h2" alt="Homestead Desktop Mockup"></a>
+      <a href="projects/ignite.html"><img src="images/ignite/Brochure.png" id="i1" alt = "Ignite Brochure Mockup"></a>
     </div>
 
 
-    <div id='Col3' class='col'>
-      <a href='projects/posters.html'><img src='images/posters/navimg-1.png' id='p1' alt = "Poster Mockup"></a>
-      <a href='projects/ignite.html'><img src='images/ignite/Brochure.png' id='i2' alt="Ignite Brochure Mockup"></a>
-      <a href='projects/homestead.html'><img src='images/homestead/Nav_Img-1.png' id='h1' alt='Homestead Desktop Mockup'></a>
-      <a href='projects/visualizer.html'><img src='images/visualizer/Nav_Img_1.png' id='vis2' alt="Visualizer Screen"></a>
+    <div id="Col3" class="col">
+      <a href="projects/posters.html"><img src="images/posters/navimg-1.png" id="p1" alt = "Poster Mockup"></a>
+      <a href="projects/ignite.html"><img src="images/ignite/Brochure.png" id="i2" alt="Ignite Brochure Mockup"></a>
+      <a href="projects/pbteen.html"><img src="images/homestead/Nav_Img-1.png" id="h1" alt="Homestead Desktop Mockup"></a>
+      <a href="projects/visualizer.html"><img src="images/visualizer/Nav_Img_1.png" id="vis2" alt="Visualizer Screen"></a>
     </div>
 
   </div>
@@ -93,9 +93,9 @@
   <!-- FOOTER -->
 
   <footer>
-    <a href='https://www.instagram.com/kaeladoodlez/'><img src='images/icons/insta.png' class='icon' alt='Instagram Icon'></a>
-    <a href='https://www.linkedin.com/in/kaela-han-54360aa8/'><img src='images/icons/linked.png' class='icon' alt='Instagram Icon'></a>
-    <a href='https://www.instagram.com/kaeladoodlez/'><img src='images/icons/sound.png' class='icon' alt='Instagram Icon'></a>
+    <a href="https://www.instagram.com/kaela.han.art/"><img src="images/icons/insta.png" class="icon" alt="Instagram Icon"></a>
+    <a href="https://www.linkedin.com/in/kaela-han-54360aa8/"><img src="images/icons/linked.png" class="icon" alt="Instagram Icon"></a>
+   
   </footer>
 
 </body>
